# CaTS

./: .gitignore  CMakeLists.txt  COMPILE  CaTS.cc  Calibration.cc  DumpHeader.cc  Hits.cc  README  drawShower.cc  drawShowerEvolution.cpp  drawShowerGUI.cc  drawShowerGif.cc  dualReadout.cc  e-.mac  electron.mac  findLastProcess.cpp  getProcessList.cc  hits.C  ialength.cc  list_dualReadout.txt  muminus.mac  p+.mac  pi-.mac  piminus.mac  profile.cc  proton.mac  readHits.cc  readHits2.cc  readHits_light.cc  response.cc  setTDRStyle.C  studyEResVsSampling.cc  test.mac  timeResolution.cc  uniformity.cc  vis.mac
doc/: CaTS_macos_instructions.doc
gdml/: SimpleExtension.xsd  bgocal.gdml  crystalcal.gdml  crystalcal_F.gdml  crystalcal_Ge.gdml  crystalcal_PbF2.gdml  crystalcal_bgo.gdml  crystalcal_block.gdml  crystalcal_rep.gdml  crystalsheetscal.gdml  crystalsheetscalBGO.gdml  crystalsheetscalPbF2.gdml  crystalsheetscalPbWO.gdml  crystalsheetscaltest.gdml  plasticsheetscaltest.gdml  plastictile.gdml  sampling-tiled.gdml  samplingcal.gdml  singlecrystal.gdml  tiledsamplingcal_1000x1000x100mmFe.gdml  tiledsamplingcal_1000x1000x10mmFe.gdml  tiledsamplingcal_1000x1000x1mmCu.gdml  tiledsamplingcal_1000x1000x1mmFe.gdml  tiledsamplingcal_1000x1000x1mmFe_rindex.gdml  tiledsamplingcal_1000x1000x1mmGd.gdml  tiledsamplingcal_1000x1000x1mmPb.gdml  tiledsamplingcal_1000x1000x1mmU.gdml  tiledsamplingcal_1000x1000x1mmW.gdml  tiledsamplingcal_1000x1000x20mmFe.gdml  tiledsamplingcal_1000x1000x20mmFe_1000x1000x5mmPlastic.gdml  tiledsamplingcal_1000x1000x30mmFe.gdml  tiledsamplingcal_1000x1000x3mmFe.gdml  tiledsamplingcal_1000x1000x50mmFe.gdml  tiledsamplingcal_1000x1000x5mmFe.gdml  tiledsamplingcal_100x100x100mAl.gdml  tiledsamplingcal_100x100x100mFe.gdml  tiledsamplingcal_100x100x100mPb.gdml  tiledsamplingcal_20x20x10mmPb_20x20x10mmLuAG.gdml  tiledsamplingcal_20x20x12mmPb_20x20x3mmLuAG.gdml  tiledsamplingcal_20x20x1mmFe.gdml  (+19 more)
grid/: my_CaTS.csh  run_CaTS_grid.csh
include/: Analysis.hh  AnalysisMessenger.hh  CalorimeterHit.hh  CalorimeterSD.hh  Cerenkov.hh  Classes.hh  Classes.hh.new  ColorReader.hh  DRCalorimeterHit.hh  DRCalorimeterSD.hh  DRTSCalorimeterHit.hh  DRTSCalorimeterHit2.hh  DRTSCalorimeterSD.hh  DRTSCalorimeterSDMessenger.hh  DRTimeSliceHit.hh  DetectorConstruction.hh  Event.hh  EventAction.hh  EventActionMessenger.hh  MyMainFrame.hh  PhotonHit.hh  PhotonSD.hh  PrimaryGeneratorAction.hh  PrimaryGeneratorActionMessenger.hh  RootIO.hh  RootIOMessenger.hh  RunAction.hh  RunActionMessenger.hh  RunHeader.hh  StackingAction.hh  StoppingCalorimeterSD.hh  TrackInformation.hh  TrackerHit.hh  TrackerSD.hh  products.hh
scripts/: EFraction.C  Econt.C  NCcont.C  NCfraction.C  beta.C  betaespec.C  betaspec.C  birks.C  birksproton.C  ceren.C  combine.csh  cresp.C  dEdx2.C  gps_template.mac  lancia.sh  launchJobs.pl  list.txt  params.cfg  particle.mac  pi0.C  plastic.sh  resp.C  run_CaTS.csh  sellmeierpbwo.C
src/: Analysis.cc  AnalysisMessenger.cc  CalorimeterHit.cc  CalorimeterSD.cc  Cerenkov.cc  ColorReader.cc  DRCalorimeterHit.cc  DRCalorimeterSD.cc  DRTSCalorimeterHit.cc  DRTSCalorimeterHit2.cc  DRTSCalorimeterSD.cc  DRTSCalorimeterSDMessenger.cc  DRTimeSliceHit.cc  DetectorConstruction.cc  Event.cc  EventAction.cc  EventActionMessenger.cc  MyMainFrame.cc  PhotonHit.cc  PhotonSD.cc  PrimaryGeneratorAction.cc  PrimaryGeneratorActionMessenger.cc  RootIO.cc  RootIOMessenger.cc  RunAction.cc  RunActionMessenger.cc  (+9 more)
(+5 files in other folders)
